Fix horizontal scroll and layout in Android 4.4.2

--- a/src/css/ionic-migration.css
+++ b/src/css/ionic-migration.css
@@ -71,14 +71,15 @@
 	right: 0px !important;
 }
 
-.item-toggle .toggle {
-	right: 28px;
+.item {
+  margin: 0;
+  border: none;
+  border-bottom: 1px solid #E9E9EC;
 }
 
 .toggle-label {
 	color: rgb(41, 55, 68);
 	font-size: 14px;
-	margin-left: 5px;
 }
 
 button, .button {
